--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Raleway:wght@100;200&display=swap');
 body{
     height: 2360px;
 }
 /* 測試用 */
-/* .container{
+.container{
     border: red solid 1px;
 }
 .col{
     border: black solid 1px;
-} */
+}
 
 /* 導覽列 */
 .navbar{
@@ -44,3 +45,34 @@ body{
   .logo_img{
       margin-left: 15%;
   }
+
+  /* 選單 */
+  .product{
+      margin-top: 40px;
+  }
+  
+  .op{
+      margin: -9px ;
+      border: 1px solid red;
+      background: #FFC800;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      
+  }
+.op_t{
+      text-decoration: none;
+      text-align: center;
+      color: #000;
+      font-family: 'Raleway', sans-serif;
+}
+.op:hover{
+    color: #F9F7F5;
+    border: 1px solid red;
+    background: #0770A9;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+.op_t:hover{
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    color: #F9F7F5;
+}
