--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,12 @@ body{
     height: 2360px;
 }
 /* 測試用 */
-.container{
+/* .container{
     border: red solid 1px;
 }
 .col{
     border: black solid 1px;
-}
+} */
 
 /* 導覽列 */
 .navbar{
@@ -51,28 +51,28 @@ body{
       margin-top: 40px;
   }
   
-  .op{
-      margin: -9px ;
-      border: 1px solid red;
-      background: #FFC800;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      
+  .pcb{
+    background: #FFC800;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 118px;
+    height: 33px;
+    justify-self: auto;
   }
-.op_t{
+  .pc{
+    color: #000000;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-decoration: none;
+    font-size: 18px ;
+    font-family: 'Raleway', sans-serif;
+  }
+
+  .pc:hover{
+      color: #F9F7F5;
       text-decoration: none;
-      text-align: center;
-      color: #000;
-      font-family: 'Raleway', sans-serif;
-}
-.op:hover{
-    color: #F9F7F5;
-    border: 1px solid red;
+  }
+  .pcb:hover{
     background: #0770A9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
-.op_t:hover{
-    text-decoration: none;
-    text-align: center;
-    font-family: 'Raleway', sans-serif;
-    color: #F9F7F5;
-}
