--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,12 @@ body{
     height: 2360px;
 }
 /* 測試用 */
-/* .container{
+.container{
     border: red solid 1px;
 }
 .col{
     border: black solid 1px;
-} */
+}
 
 /* 導覽列 */
 .navbar{
@@ -46,7 +46,7 @@ body{
       margin-left: 15%;
   }
 
-  /* 選單 */
+  /* 商品選單 */
   .product{
       margin-top: 40px;
   }
@@ -75,4 +75,9 @@ body{
   .pcb:hover{
     background: #0770A9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  /* slider */
+  .slider{
+      margin-top: 60px;
   }
