--- a/css/style.css
+++ b/css/style.css
@@ -4,23 +4,23 @@ body{
     background-color: #F9F7F5;
 }
 /* 測試用 */
-.container{
+/* .container{
     border: red solid 1px;
 }
 .col{
     border: black solid 1px;
-}
+} */
 
 /* 導覽列 */
 .navbar{
     text-decoration: none;
-    height: 40px;
     background-color: #0770A9;
 }
+
 .navword{
     text-decoration: none;
     color: #F9F7F5;
-    text-align: right;
+    text-align: left;
 }
 .navword:hover{
     text-decoration: none;
@@ -49,7 +49,7 @@ body{
 
   /* 商品選單 */
   .product{
-      margin-top: 40px;
+      margin-top: 30px;
   }
   
   .pcb{
@@ -79,6 +79,126 @@ body{
   }
 
   /* slider */
- .slide{
-     object-fit: cover;
- }
+  .slide-div{
+      width: 840px;
+      height: 598px;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      top: 0;
+      margin: auto;
+      margin-top: 30px;
+  }
+
+.slider{
+  width: 840px;
+  height: 500px;
+
+  overflow: hidden;
+}
+
+.slides{
+  width: 500%;
+  height: 500px;
+  display: flex;
+}
+
+.slides input{
+  display: none;
+}
+
+.slide{
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img{
+  width: 840px;
+  height: 550px;
+  object-fit: cover;
+}
+
+/*css for manual slide navigation*/
+
+.navigation-manual{
+  position: absolute;
+  width: 800px;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn{
+  border: 2px solid #0770A9;
+  background-color: #0770A9;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+  margin-top: 60px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.manual-btn:not(:last-child){
+  margin-right: 40px;
+}
+
+.manual-btn:hover{
+  border: 2px solid #FFC800;
+  background: #FFC800;
+}
+
+#radio1:checked ~ .first{
+  margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+  margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+  margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+  margin-left: -60%;
+}
+
+/*css for automatic navigation*/
+
+.navigation-auto{
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div{
+  border: 2px solid #0770A9;
+  background-color: #0770A9;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+  margin-top: 60px;
+}
+
+.navigation-auto div:not(:last-child){
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1{
+    border: 2px solid #FFC800;
+    background: #FFC800;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2{
+    border: 2px solid #FFC800;
+    background: #FFC800;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3{
+border: 2px solid #FFC800;
+  background: #FFC800;
+}
+
