--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@ body{
     background-color: #F9F7F5;
 }
 /* 測試用 */
-/* .container{
+.container{
     border: red solid 1px;
 }
 .col{
     border: black solid 1px;
-} */
+}
 
 /* 導覽列 */
 .navbar{
@@ -58,6 +58,11 @@ body{
     width: 118px;
     height: 33px;
     justify-self: auto;
+    left: 0;
+      bottom: 0;
+      right: 0;
+      top: 0;
+      margin: auto;
   }
   .pc{
     color: #000000;
@@ -81,19 +86,20 @@ body{
   /* slider */
   .slide-div{
       width: 840px;
-      height: 598px;
+      height: 560px;
       left: 0;
       bottom: 0;
       right: 0;
       top: 0;
       margin: auto;
       margin-top: 30px;
+ 
   }
 
 .slider{
   width: 840px;
   height: 500px;
-
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   overflow: hidden;
 }
 
@@ -101,6 +107,7 @@ body{
   width: 500%;
   height: 500px;
   display: flex;
+  
 }
 
 .slides input{
@@ -108,6 +115,7 @@ body{
 }
 
 .slide{
+ 
   width: 20%;
   transition: 2s;
 }
@@ -201,4 +209,75 @@ body{
 border: 2px solid #FFC800;
   background: #FFC800;
 }
+.shoes{
+    position: relative;
+    width: 270px;
+    height: 210px;
+    border: red solid 1px;
+}
 
+/* new arrival */
+.block{
+    height: 341.11px;
+}
+.bgc{
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    position: absolute;
+    width: 271.62px;
+    height: 341.11px;
+    background-color: #FFC800;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.new-text{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+    padding-left: 10px;
+}
+.new-img{
+    position: relative;
+    width: 243.2px;
+    height: 287.41px; 
+    top: 4px;  
+    left: 28.44px;
+   
+}
+/* middle */
+.middle{
+    margin-top: 80px;
+    display: -webkit-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.line{
+    width: 449px;
+    border: 1px solid #000000;
+}
+.middle-text{
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    width: 316px;
+    height: 71px;
+    margin-top: -40px;
+}
+.mt{
+    font-family: Monoton;
+    font-size: 36px;
+    letter-spacing: -0.015em;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-decoration: none;
+    line-height: 70px;
+}
