--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body{
   background-color: #0770A9;
   padding: 5px;
   border-radius: 10px;
-  transition: 1s;
+  transition: 0.5s;
   margin-top: 60px;
 }
 
@@ -217,6 +217,9 @@ border: 2px solid #FFC800;
 }
 
 /* new arrival */
+.new{
+    margin-top: 40px;
+}
 .block{
     height: 341.11px;
 }
@@ -281,3 +284,45 @@ border: 2px solid #FFC800;
     text-decoration: none;
     line-height: 70px;
 }
+/* lookbook */
+.lookbook{
+    margin-top: 40px;
+}
+.lbp{
+    width: 250.26px;
+    height: 339.67px;
+}
+.button{
+   
+    width: 100px;
+    height: 24.26px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    display: -webkit-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.cho{
+    border: 2px solid #0770A9;
+    background-color: #0770A9;
+    padding: 5px;
+    border-radius: 100%;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+  }
+  .cho:hover{
+    border: 2px solid #FFC800;
+    background: #FFC800;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
