--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Monoton&family=Raleway:wght@100;200&display=swap');
 body{
-    height: 2360px;
+  margin: 0;
+  padding: 0;
+    height: 2050px;
     background-color: #F9F7F5;
 }
 /* 測試用 */
-.container{
+/* .container{
     border: red solid 1px;
 }
 .col{
     border: black solid 1px;
-}
+} */
 
 /* 導覽列 */
 .navbar{
@@ -322,7 +324,117 @@ border: 2px solid #FFC800;
     margin: auto;
   }
   .cho:hover{
-    border: 2px solid #FFC800;
+    
     background: #FFC800;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
+
+  /* footer */
+  .footer{
+    margin-top: 50px;
+    width: 100%;
+    height: 350px;
+    background-color: #0770A9;
+  }
+.blank{
+  height: 40px;
+}
+.con-text{
+  left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    
+}
+.con-text-2{
+  margin-top: 35px;
+  
+}
+h2{
+  font-family: Raleway;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 40px;
+margin-top: 5px;
+display: flex;
+align-items: center;
+letter-spacing: -0.015em;
+color: #F9F7F5;
+
+}
+.con-if{
+  font-family: Raleway;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 30px;
+display: flex;
+align-items: center;
+letter-spacing: -0.015em;
+color: #F9F7F5;left: 0;
+bottom: 0;
+right: 0;
+top: 0;
+margin: auto;
+}
+.footer-a{
+text-decoration: none;
+font-family: Raleway;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 25px;
+display: flex;
+align-items: center;
+letter-spacing: -0.015em;
+color: #F9F7F5;
+}
+.footer-a:hover{
+  color: #F9F7F5;
+      text-decoration: none;
+      -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+      -webkit-mask-size: 200%;
+      animation: shine 2s infinite;
+  }
+  @-webkit-keyframes shine {
+      from {
+        -webkit-mask-position: 150%;
+      }
+      
+      to {
+        -webkit-mask-position: -50%;
+      }
+    }
+    .icon{
+     padding-left: 55px;
+     
+    }
+    .icon-img{
+      width: 60px;
+      height: 60px;
+    }
+    .icon-img:hover{
+      
+        width: 65px;
+        height: 65px;
+    }
+    .blank-2{
+      padding-top: 15px;
+    }
+    .footer-text{
+      font-family: Raleway;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 21px;
+      letter-spacing: -0.015em;
+      color: #F9F7F5;
+      
+    }
+    p{
+      
+      align-items: center;
+      text-align: center;
+    }
